fix issue where disabled inputs don't submit when i want them to

--- a/templates/criminals.html
+++ b/templates/criminals.html
@@ -200,7 +200,7 @@
                                 <label for="c_id">Criminal ID</label>
                             </div>
                             <div class="col-sm-10">
-                                <input type="text" name="c_id" id="c_id" class="form-control" disabled>
+                                <input type="text" name="c_id" id="c_id" class="form-control" readonly>
                             </div>
                         </div>
                         <div class="row mb-3">
@@ -224,7 +224,7 @@
                                 <label for="alias">Alias</label>
                             </div>
                             <div class="col-sm-10">
-                                <input type="text" name="alias" id="alias" class="form-control" disabled>
+                                <input type="text" name="alias" id="alias" class="form-control" readonly>
                             </div>
                         </div>
                         <div class="row mb-3">
