--- a/templates/crimes.html
+++ b/templates/crimes.html
@@ -167,7 +167,7 @@
                                 <label for="c_id">Crime ID</label>
                             </div>
                             <div class="col-sm-10">
-                                <input type="text" name="cr_id" id="cr_id" class="form-control" disabled>
+                                <input type="text" name="cr_id" id="cr_id" class="form-control" readonly>
                             </div>
                         </div>
                         <div class="row mb-3">
@@ -175,7 +175,7 @@
                                 <label for="c_id">Criminal in Question</label>
                             </div>
                             <div class="col-sm-10">
-                                <input type="text" name="c_id" id="c_id" class="form-control" disabled>
+                                <input type="text" name="c_id" id="c_id" class="form-control" readonly>
                             </div>
                         </div>
                         <div class="row mb-3">
