--- a/templates/officers.html
+++ b/templates/officers.html
@@ -60,7 +60,7 @@
                     {% for officer in officers %}
                     <tr>
                         <td><input type="checkbox" id="check{{ officer['Officer_ID'] }}" name="check{{ officer['Officer_ID'] }}" value=""></td>
-                        <th scope="row">{{ officer["Officer_ID"] }}</th>
+                        <th scope="row"><a href="" data-bs-toggle="modal" data-bs-target="#editModal" onclick='javascript: showInfo({{ officer|tojson|safe }});'>{{ officer["Officer_ID"] }}</a></th>
                         <td>{{ officer["First"] }}</td>
                         <td>{{ officer["Last"] }}</td>
                         <td>{{ officer["Precinct"] }}</td>
@@ -152,6 +152,109 @@
               </div>
             </div>
           </div>
+          <!-- edit/view modal -->
+          <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="editModalLabel">Edit Officer</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form method="post">
+                    <div class="modal-body">
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="officer_id">Officer ID</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="officer_id" id="officer_id" class="form-control" readonly>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="f_name">First Name</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="f_name" id="f_name" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="l_name">Last Name</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="l_name" id="l_name" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="precinct">Precinct</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="precinct" id="precinct" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="phone">Phone</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="phone" id="phone" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="badge">Badge</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="badge" id="badge" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="status">Status</label>
+                            </div>
+                            <div class="col-sm-10" id="status">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="status" id="active" value="A" checked>
+                                    <label class="form-check-label" for="active">
+                                        Active
+                                    </label>
+                                </div>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="status" id="inactive" value="I">
+                                    <label class="form-check-label" for="inactive">
+                                        Inactive
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
+                        </button>
+                        <input type="submit" class="btn btn-primary" value="Edit Officer" onclick="javascript: form.action='/edit-officer'; form.method='post'">
+                    </div>
+                </form>
+              </div>
+            </div>
+          </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script>
+            function showInfo(officer) {
+                var editForm = document.getElementById("editModal");
+                editForm.querySelector("#officer_id").value = officer['Officer_ID'];
+                editForm.querySelector("#l_name").value = officer['Last'];
+                editForm.querySelector("#f_name").value = officer['First'];
+                editForm.querySelector("#precinct").value = officer['Precinct'];
+                editForm.querySelector("#phone").value = officer['Phone'];
+                editForm.querySelector("#badge").value = officer['Badge'];
+                if (officer['Status'] === "A") {
+                    editForm.querySelector("#status").querySelector("#active").checked = true;
+                } else if (officer['Status'] === "I") {
+                    editForm.querySelector("#status").querySelector("#inactive").checked = true;
+                }
+            }
+        </script>
     </body>
 </html>
