--- a/templates/appeals.html
+++ b/templates/appeals.html
@@ -58,7 +58,7 @@
                     {% for appeal in appeals %}
                     <tr>
                         <td><input type="checkbox" id="check{{ appeal['Appeal_ID'] }}" name="check{{ appeal['Appeal_ID'] }}" value=""></td>
-                        <th scope="row">{{ appeal["Appeal_ID"] }}</th>
+                        <th scope="row"><a href="" data-bs-toggle="modal" data-bs-target="#editModal" onclick='javascript: showInfo({{ appeal|tojson|safe }});'>{{ appeal["Appeal_ID"] }}</a></th>
                         <td>{{ appeal["Crime_ID"] }}</td>
                         <td>{{ appeal["Filing_date"] }}</td>
                         <td>{{ appeal["Hearing_date"] }}</td>
@@ -126,6 +126,81 @@
               </div>
             </div>
           </div>
+          <!-- edit/view modal -->
+          <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="editModalLabel">Edit Appeal</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form method="post">
+                    <div class="modal-body">
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="appeal_id">Appeal ID</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="appeal_id" id="appeal_id" class="form-control" readonly>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="crime_id">Crime ID</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="crime_id" id="crime_id" class="form-control" readonly>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="file_date">Filing Date</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="date" name="file_date" id="file_date" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="hearing_date">Hearing Date</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="date" name="hearing_date" id="hearing_date" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="status">Status</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <select class="form-select" id="status" name="status">
+                                    <option selected value="">Choose...</option>
+                                    <option value="P">Pending</option>
+                                    <option value="A">Approved</option>
+                                    <option value="D">Disapproved</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
+                        </button>
+                        <input type="submit" class="btn btn-primary" value="Edit Appeal" onclick="javascript: form.action='/edit-appeal'; form.method='post'">
+                    </div>
+                </form>
+              </div>
+            </div>
+          </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script>
+            function showInfo(appeal) {
+                var editForm = document.getElementById("editModal");
+                editForm.querySelector("#appeal_id").value = appeal['Appeal_ID'];
+                editForm.querySelector("#crime_id").value = appeal['Crime_ID'];
+                editForm.querySelector("#file_date").valueAsDate = new Date(appeal["Filing_date"]);
+                editForm.querySelector("#hearing_date").valueAsDate = new Date(appeal['Hearing_date']);
+                editForm.querySelector("#status").value = appeal['Status'];
+            }
+        </script>
     </body>
 </html>
