--- a/templates/sentences.html
+++ b/templates/sentences.html
@@ -60,7 +60,7 @@
                     {% for sentence in sentences %}
                     <tr>
                         <td><input type="checkbox" id="check{{ sentence['Sentence_ID'] }}" name="check{{ sentence['Sentence_ID'] }}" value=""></td>
-                        <th scope="row">{{ sentence["Sentence_ID"] }}</th>
+                        <th scope="row"><a href="" data-bs-toggle="modal" data-bs-target="#editModal" onclick='javascript: showInfo({{ sentence|tojson|safe }});'>{{ sentence["Sentence_ID"] }}</a></th>
                         <td>{{ sentence["Criminal_ID"] }}</td>
                         <td>{{ sentence["Type"] }}</td>
                         <td>{{ sentence["Prob_ID"] }}</td>
@@ -146,6 +146,99 @@
               </div>
             </div>
           </div>
+          <!-- edit/view modal -->
+          <div class="modal fade" id="editModal" tabindex="-1" aria-labelledby="editModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="editModalLabel">Edit Sentence</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form method="post">
+                    <div class="modal-body">
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="s_id">Sentence ID</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="s_id" id="s_id" class="form-control" readonly>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="c_id">Criminal in Question</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="c_id" id="c_id" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="p_id">Assigned Probation Officer ID</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="p_id" id="p_id" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="sentence_type">Sentence Type</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <select class="form-select" id="sentence_type" name="sentence_type">
+                                    <option selected value="">Choose...</option>
+                                    <option value="J">Jail Period</option>
+                                    <option value="H">House Arrest</option>
+                                    <option value="P">Probation</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="start_date">Start Date</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="date" name="start_date" id="start_date" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="end_date">End Date</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="date" name="end_date" id="end_date" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
+                                <label for="violations">Violations</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="violations" id="violations" class="form-control">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel
+                        </button>
+                        <input type="submit" class="btn btn-primary" value="Add Sentence" onclick="javascript: form.action='/edit-sentence'; form.method='post'">
+                    </div>
+                </form>
+              </div>
+            </div>
+          </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script>
+            function showInfo(sentence) {
+                var editForm = document.getElementById("editModal");
+                editForm.querySelector("#s_id").value = sentence['Sentence_ID'];
+                editForm.querySelector("#c_id").value = sentence['Criminal_ID'];
+                editForm.querySelector("#p_id").value = sentence['Prob_ID'];
+                editForm.querySelector("#sentence_type").value = sentence['Type'];
+                editForm.querySelector("#start_date").valueAsDate = new Date(sentence['Start_date']);
+                editForm.querySelector("#end_date").valueAsDate = new Date(sentence['End_date']);
+                editForm.querySelector("#violations").value = sentence['Violations'];
+            }
+        </script>
     </body>
 </html>
