--- a/templates/probation_officers.html
+++ b/templates/probation_officers.html
@@ -33,7 +33,9 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="sentences">Sentences</a>
                 </li>
-                <li class="nav-item">
+            </ul>
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                <li class="nav-item me-auto">
                     <a class="nav-link active" aria-current="page" href="/">Logout</a>
                 </li>
             </ul>
