--- a/templates/criminals.html
+++ b/templates/criminals.html
@@ -42,8 +42,12 @@
             </div>
         </div>
         </nav>
-        <h1>Criminals</h1>
-        <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addModal">Add Criminal</a>
+        <div class="row justify-content-end">
+            <h1 class="col">Criminals</h1>
+            <div class="col">
+                <a class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#addModal">Add Criminal</a>
+            </div>
+        </div>
         <form method="post">
             <table class="table table-striped table-hover">
                 <thead>
