--- a/templates/criminals.html
+++ b/templates/criminals.html
@@ -48,6 +48,25 @@
                 <a class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#addModal">Add Criminal</a>
             </div>
         </div>
+        <form class="d-flex" method="get" role="search">
+            <div class="input-group mb-3">
+                <select class="input-group-text" id="form-control" name="column">
+                    <option value="c_id">C_ID</option>
+                    <option value="first">First Name</option>
+                    <option value="last">Last Name</option>
+                    <option value="alias">Alias</option>
+                    <option value="street">Street</option>
+                    <option value="city">City</option>
+                    <option value="state">State</option>
+                    <option value="zip">ZIP</option>
+                    <option value="phone">Phone Number</option>
+                    <option value="v_status">V</option>
+                    <option value="p_status">P</option>
+                </select>
+                <input type="text" class="form-control" aria-label="Search" placeholder="Search" id="search" name="query">
+                <input type="submit" class="btn btn-outline-success" value="Search">
+            </div>
+        </form>
         <form method="post">
             <table class="table table-striped table-hover">
                 <thead>
