--- a/templates/appeals.html
+++ b/templates/appeals.html
@@ -48,6 +48,19 @@
                 <a class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#addModal">Add Appeal</a>
             </div>
         </div>
+        <form class="d-flex" method="get" role="search">
+            <div class="input-group mb-3">
+                <select class="input-group-text" id="form-control" name="column">
+                    <option value="a_id">Appeal ID</option>
+                    <option value="c_id">Crime ID</option>
+                    <option value="file_date">Filing Date</option>
+                    <option value="hear_date">Hearing Date</option>
+                    <option value="status">Status</option>
+                </select>
+                <input type="text" class="form-control" aria-label="Search" placeholder="Search" id="search" name="query">
+                <input type="submit" class="btn btn-outline-success" value="Search">
+            </div>
+        </form>
         <form method="post">
             <table class="table table-striped table-hover">
                 <thead>
