added a maxlength restriction

--- a/templates/appeals.html
+++ b/templates/appeals.html
@@ -57,7 +57,7 @@
                     <option value="hear_date">Hearing Date</option>
                     <option value="status">Status</option>
                 </select>
-                <input type="text" class="form-control" aria-label="Search" placeholder="Search" id="search" name="query">
+                <input type="text" class="form-control" aria-label="Search" placeholder="Search" id="search" name="query" maxlength=100">
                 <input type="submit" class="btn btn-outline-success" value="Search">
             </div>
         </form>
