--- a/templates/criminals.html
+++ b/templates/criminals.html
@@ -63,7 +63,7 @@
                     <option value="v_status">V</option>
                     <option value="p_status">P</option>
                 </select>
-                <input type="text" class="form-control" aria-label="Search" placeholder="Search" id="search" name="query">
+                <input type="text" class="form-control" aria-label="Search" placeholder="Search" id="search" name="query" maxlength=100">
                 <input type="submit" class="btn btn-outline-success" value="Search">
             </div>
         </form>
