--- a/templates/charges.html
+++ b/templates/charges.html
@@ -48,6 +48,22 @@
                 <a class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#addModal">Add Charge</a>
             </div>
         </div>
+        <form class="d-flex" method="get" role="search">
+            <div class="input-group mb-3">
+                <select class="input-group-text" id="form-control" name="column">
+                    <option value="charge_ID">Charge ID</option>
+                    <option value="crime_ID">Crime ID</option>
+                    <option value="crime_Code">Crime Code</option>
+                    <option value="status">Status</option>
+                    <option value="fine">Fine</option>
+                    <option value="court_fee">Court Fee</option>
+                    <option value="amt_paid">Amount Paid</option>
+                    <option value="due_date">Due Date</option>
+                </select>
+                <input type="text" class="form-control" aria-label="Search" placeholder="Search" id="search" name="query" maxlength=100">
+                <input type="submit" class="btn btn-outline-success" value="Search">
+            </div>
+        </form>
         <form method="post">
             <table class="table table-striped table-hover">
                 <thead>
