--- a/templates/crimes.html
+++ b/templates/crimes.html
@@ -48,13 +48,28 @@
                 <a class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#addModal">Add Crime</a>
             </div>
         </div>
+        <form class="d-flex" method="get" role="search">
+            <div class="input-group mb-3">
+                <select class="input-group-text" id="form-control" name="column">
+                    <option value="cr_id">Charge ID</option>
+                    <option value="c_id">Crime ID</option>
+                    <option value="classification">Classification</option>
+                    <option value="date_charge">Date Charged</option>
+                    <option value="status">Status</option>
+                    <option value="hearing_date">Hearing Date</option>
+                    <option value="appeal_cutoff_date">Appeal Cutoff Date</option>
+                </select>
+                <input type="text" class="form-control" aria-label="Search" placeholder="Search" id="search" name="query" maxlength=100">
+                <input type="submit" class="btn btn-outline-success" value="Search">
+            </div>
+        </form>
         <form method="post">
             <table class="table table-striped table-hover">
                 <thead>
                     <tr>
                         <th></th>
-                        <th scope="col">CR_ID</th>
-                        <th scope="col">C_ID</th>
+                        <th scope="col">Crime ID</th>
+                        <th scope="col">Criminal ID</th>
                         <th scope="col">Classification</th>
                         <th scope="col">Date Charged</th>
                         <th scope="col">Status</th>
