--- a/templates/officers.html
+++ b/templates/officers.html
@@ -48,6 +48,21 @@
                 <a class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#addModal">Add Officer</a>
             </div>
         </div>
+        <form class="d-flex" method="get" role="search">
+            <div class="input-group mb-3">
+                <select class="input-group-text" id="form-control" name="column">
+                    <option value="o_id">Officer ID</option>
+                    <option value="f_name">First Name</option>
+                    <option value="l_name">Last Name</option>
+                    <option value="precinct">Precinct</option>
+                    <option value="phone">Phone</option>
+                    <option value="badge">Badge</option>
+                    <option value="status">Status</option>
+                </select>
+                <input type="text" class="form-control" aria-label="Search" placeholder="Search" id="search" name="query" maxlength=100">
+                <input type="submit" class="btn btn-outline-success" value="Search">
+            </div>
+        </form>
         <form method="post">
             <table class="table table-striped table-hover">
                 <thead>
