--- a/templates/probation_officers.html
+++ b/templates/probation_officers.html
@@ -48,6 +48,23 @@
                 <a class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#addModal">Add Probation Officer</a>
             </div>
         </div>
+        <form class="d-flex" method="get" role="search">
+            <div class="input-group mb-3">
+                <select class="input-group-text" id="form-control" name="column">
+                    <option value="p_id">Probation Officer ID</option>
+                    <option value="c_id">Crime ID</option>
+                    <option value="c_code">Crime Code</option>
+                    <option value="street">Street</option>
+                    <option value="city">City</option>
+                    <option value="zip">ZIP Code</option>
+                    <option value="phone">Phone Number</option>
+                    <option value="email">Email</option>
+                    <option value="status">Status</option>
+                </select>
+                <input type="text" class="form-control" aria-label="Search" placeholder="Search" id="search" name="query" maxlength=100">
+                <input type="submit" class="btn btn-outline-success" value="Search">
+            </div>
+        </form>
         <form method="post">
             <table class="table table-striped table-hover">
                 <thead>
