--- a/templates/sentences.html
+++ b/templates/sentences.html
@@ -48,6 +48,21 @@
                 <a class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#addModal">Add Sentence</a>
             </div>
         </div>
+        <form class="d-flex" method="get" role="search">
+            <div class="input-group mb-3">
+                <select class="input-group-text" id="form-control" name="column">
+                    <option value="s_id">Sentence ID</option>
+                    <option value="c_id">Crime ID</option>
+                    <option value="type">Type</option>
+                    <option value="p_id">Probation ID</option>
+                    <option value="start_date">Start Date</option>
+                    <option value="end_date">End Date</option>
+                    <option value="violations">Violations</option>
+                </select>
+                <input type="text" class="form-control" aria-label="Search" placeholder="Search" id="search" name="query" maxlength=100">
+                <input type="submit" class="btn btn-outline-success" value="Search">
+            </div>
+        </form>
         <form method="post">
             <table class="table table-striped table-hover">
                 <thead>
