added searching for probation officers

--- a/templates/probation_officers.html
+++ b/templates/probation_officers.html
@@ -52,8 +52,8 @@
             <div class="input-group mb-3">
                 <select class="input-group-text" id="form-control" name="column">
                     <option value="p_id">Probation Officer ID</option>
-                    <option value="c_id">Crime ID</option>
-                    <option value="c_code">Crime Code</option>
+                    <option value="f_name">First Name</option>
+                    <option value="l_name">Last Name</option>
                     <option value="street">Street</option>
                     <option value="city">City</option>
                     <option value="zip">ZIP Code</option>
