added searching to charges

--- a/templates/charges.html
+++ b/templates/charges.html
@@ -51,9 +51,9 @@
         <form class="d-flex" method="get" role="search">
             <div class="input-group mb-3">
                 <select class="input-group-text" id="form-control" name="column">
-                    <option value="charge_ID">Charge ID</option>
-                    <option value="crime_ID">Crime ID</option>
-                    <option value="crime_Code">Crime Code</option>
+                    <option value="charge_id">Charge ID</option>
+                    <option value="crime_id">Crime ID</option>
+                    <option value="crime_code">Crime Code</option>
                     <option value="status">Status</option>
                     <option value="fine">Fine</option>
                     <option value="court_fee">Court Fee</option>
