allow users to specifiy their own ID

--- a/templates/officers.html
+++ b/templates/officers.html
@@ -106,6 +106,14 @@
                     <div class="modal-body">
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
+                                <label for="officer_id">Officer ID</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="officer_id" id="officer_id" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
                                 <label for="f_name">First Name</label>
                             </div>
                             <div class="col-sm-10">
