--- a/templates/probation_officers.html
+++ b/templates/probation_officers.html
@@ -114,6 +114,14 @@
                     <div class="modal-body">
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
+                                <label for="prob_id">Probation Officer ID</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="prob_id" id="prob_id" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
                                 <label for="f_name">First Name</label>
                             </div>
                             <div class="col-sm-10">
