--- a/templates/appeals.html
+++ b/templates/appeals.html
@@ -100,6 +100,14 @@
                     <div class="modal-body">
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
+                                <label for="appeal_id">Appeal ID</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="appeal_id" id="appeal_id" class="form-control" readonly>
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
                                 <label for="crime_id">Crime ID</label>
                             </div>
                             <div class="col-sm-10">
