--- a/templates/charges.html
+++ b/templates/charges.html
@@ -109,6 +109,14 @@
                     <div class="modal-body">
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
+                                <label for="charge_id">Charge ID</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="charge_id" id="charge_id" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
                                 <label for="c_id">Crime to Add Charge to</label>
                             </div>
                             <div class="col-sm-10">
