--- a/templates/criminals.html
+++ b/templates/criminals.html
@@ -118,6 +118,14 @@
                     <div class="modal-body">
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
+                                <label for="c_id">Criminal ID</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="c_id" id="c_id" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
                                 <label for="f_name">First Name</label>
                             </div>
                             <div class="col-sm-10">
