--- a/templates/sentences.html
+++ b/templates/sentences.html
@@ -106,6 +106,14 @@
                     <div class="modal-body">
                         <div class="row mb-3">
                             <div class="col-sm-2 col-form-label">
+                                <label for="s_id">Sentence ID</label>
+                            </div>
+                            <div class="col-sm-10">
+                                <input type="text" name="s_id" id="s_id" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3">
+                            <div class="col-sm-2 col-form-label">
                                 <label for="c_id">Criminal in Question</label>
                             </div>
                             <div class="col-sm-10">
