Fixed unable to edit appeal ID

--- a/templates/appeals.html
+++ b/templates/appeals.html
@@ -103,7 +103,7 @@
                                 <label for="appeal_id">Appeal ID</label>
                             </div>
                             <div class="col-sm-10">
-                                <input type="text" name="appeal_id" id="appeal_id" class="form-control" readonly>
+                                <input type="text" name="appeal_id" id="appeal_id" class="form-control">
                             </div>
                         </div>
                         <div class="row mb-3">
